# awsrt

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPRODUCIBILITY_v0.1.md  RESULTS_MANIFEST_v0.1.md  VERSION_NOTES_v0.1.md  VERSION_NOTES_v0.2.md  pyproject.toml
backend/: pytest.ini
backend/api/: main.py
backend/tests/: conftest.py  test_fire_weather_and_coupling.py  test_paths_chunking_and_dtype.py  test_physical_integration.py  test_weather.py  test_zarr_policy.py
data/manifests/: ana-00d070b5d3.json  ana-034cfdd844.json  ana-0efec3404f.json  ana-1c883c32b1.json  ana-52822da98b.json  ana-b092112342.json  ana-cfc2f473a7.json  ana-dfef8e5883.json  ana-f3a4466110.json  opr-00f77515b3.json  opr-01693d29e0.json  opr-027a342bda.json  opr-0337d1874e.json  opr-034780a41d.json  opr-03516abb6a.json  opr-04a79948c0.json  opr-04d5c1f8f2.json  opr-05ed7efedb.json  opr-0604ecefcc.json  opr-097bed91f3.json  opr-09c3328ab8.json  opr-0aa1371652.json  opr-0b6128e66c.json  opr-0c99bdf9fb.json  opr-0d49e97c3c.json  opr-0d79a2c9f5.json  opr-0f8703530c.json  opr-0faa890ead.json  opr-0fd94be56f.json  opr-0ff960fcc2.json  opr-10c0025f62.json  opr-1147a3acc0.json  opr-11fa8d0a06.json  opr-11fbbfacfc.json  opr-133a0d4478.json  opr-13415763c6.json  opr-1342abe387.json  opr-153afd0e74.json  opr-15843d80f3.json  (+402 more)
docs/: README.md
frontend/: package-lock.json  package.json
notes/: fireIDs.txt  run_notes.txt
paper/: paper.bib  paper.md
src/: extract_analysis_study_summary.py  package_v0_6_distance_window_results.py
(+157 files in other folders)
